# BookBrain

./: .gitignore  LICENSE  README.md
client/: index.html  package-lock.json  package.json  test_pdfjs.js  vite.config.ts
client/src/: App.tsx  api.ts  index.css  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
client/src/components/: BookDetail.tsx  FileBrowser.tsx  Sidebar.tsx  Topbar.tsx
client/src/pages/: IngestPage.tsx  LibraryPage.tsx  ReaderPage.tsx  SearchPage.tsx  SettingsPage.tsx
docker/: Dockerfile  docker-compose.yml
server/: check_books.py  check_books_short.py  check_db.py  config.py  diag_api.py  main.py  rebuild_index.py  requirements.txt  reset_db.py
server/api/: __init__.py  routes.py  schemas.py
server/classify/: __init__.py  classifier.py
server/db/: __init__.py  crud.py  database.py  models.py
server/ingest/: __init__.py  extractor.py  ocr.py  pipeline.py  scanner.py
server/search/: __init__.py  vector_store.py
